[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = {version = "^0.4", features = ["html_reports"]}

[dependencies]
rand = "^0.8.5"
bitvec = "^1.0.1"
itertools = "^0.11.0"
thiserror = "^1.0.40"

[profile.release]
lto = "fat"

[[bench]]
name = "solver"
harness = false

[[bench]]
name = "generator"
harness = false
