[package]
name = "sudoku"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = {version = "^0.7", features = ["html_reports"]}

[dependencies]
rand = "^0.9"
bitvec = "^1"
itertools = "^0.14"
thiserror = "^2.0"
rayon = "^1.7.0"

[profile.release]
lto = "fat"

[[bench]]
name = "solver"
harness = false

[[bench]]
name = "generator"
harness = false
